[FIX] Fixed vertical overflow

--- a/dc-comics/src/index.css
+++ b/dc-comics/src/index.css
@@ -10,7 +10,7 @@
 body {
   background-color: #1C1C1C;
   font-family: "Open Sans", sans-serif;
-  padding-top: 40px;
+  padding-top: 30px;
 }
 
 img {
